--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
     "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
-    "iron-icon": "PolymerElements/iron-icon#^2.0.1"
+    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+    "l2t-paper-slider": "Link2Twenty/l2t-paper-slider#^1.4.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
