--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "iron-icon": "PolymerElements/iron-icon#^2.0.1",
-    "l2t-paper-slider": "Link2Twenty/l2t-paper-slider#^1.4.2"
+    "l2t-paper-slider": "Link2Twenty/l2t-paper-slider#^1.4.2",
+    "paper-input": "PolymerElements/paper-input#^2.0.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
